--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <div data-aos="fade-up"  class="information-bloque">
     <img src="./img-editables/PARKING.png" alt="">
     <h3  data-aos="fade-up">Dress code - Formal</h3>
-    <p  data-aos="fade-up">Levanten una copa, pónganse elegantes y compartan con nosotros este momento tan especial.</p>    
+    <p  data-aos="fade-up">Levanta una copa, ponte elegante y comparte con nosotros este momento tan especial.</p>    
    </div>
 </div>  
 </main>
