--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <div data-aos="fade-in"  class="timing">
     <img src="./img-editables/virgen.png" alt="">
     <p>Bajo la protección de la Virgen de Lourdes, celebramos nuestro amor eterno.</p>
-    <p>Nos llenaria de alegris que le regales unas flores y una oración por nuestra unión.</p>
+    <p>Nos llenaria de alegria que le regales unas flores y una oración por nuestra unión.</p>
   </div>
   <div  data-aos="fade-in" class="fotos">
     <img src="./img-editables/2.png" alt="">
