--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
   
   <div data-aos="fade-in"  class="timing">
     <img src="./img-editables/virgen.png" alt="">
-    <p>Bajo la protección de la Virgen de Lourdes, celebramos nuestro amor eterno.</p>
-    <p>Nos llenaria de alegria que le regales unas flores y una oración por nuestra unión.</p>
+    <p>Bajo la protección de la Virgen de Lourdes, celebramos nuestro amor.</p>
+    <p>Nos llenaria de alegria que le regales unas flores 🌹a la Virgen, una oración por nuestra unión y una foto en instagram desde el lugar en donde estás.</p>
   </div>
   <div  data-aos="fade-in" class="fotos">
     <img src="./img-editables/2.png" alt="">
@@ -73,13 +73,12 @@
 <main>
   <div class="information">
     
-  <div data-aos="fade-up"  class="information-bloque">
-    <img src="./figuras/instagram.png" alt="">
-    <h3>Instagram</h3>
-    <p>¡Haz que cada foto sea inolvidable! Usa nuestro filtro exclusivo de Instagram para capturar momentos mágicos, ¡no olvides etiquetarnos! </p>
-    <a class="boton"  href="https://www.instagram.com/christoferisea?igsh=NGtxMzZnMzU3Ym94">INSTAGRAM</a>
-  </div>
-
+    <div data-aos="fade-up"  class="information-bloque">
+      <img src="./figuras/instagram.png" alt="">
+      <h3>Instagram</h3>
+      <p>¡Haz que cada foto sea inolvidable! Usa nuestro filtro exclusivo de Instagram para capturar momentos mágicos, ¡no olvides etiquetarnos! <strong>@alemantilla1 y @christoferisea</strong></p>
+      <a class="boton"  href="https://www.instagram.com/ar/857696999624233/">INSTAGRAM</a>
+    </div>
 <!--
     <div data-aos="fade-up"  class="information-bloque">
     <img src="./figuras/playlist.png" alt="">
