--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <br>
     <img src="./figuras/giftcard.png" alt="">
     <h3  data-aos="fade-up">Mesa de regalos</h3>
-    <p  data-aos="fade-up">Tu presencia es lo más importante, pero si deseas hacernos un regalo podrias ayudarnos con nuestra luna de miel.</p>
+    <p  data-aos="fade-up">Tu presencia es lo más importante, pero si deseas hacernos un regalo podrías ayudarnos con nuestra luna de miel.</p>
     <div class="botones">
       <a class="boton" onclick="copyToClipboard('7862229445')" >Zelle </a>
     </div>
