--- a/index.html
+++ b/index.html
@@ -79,15 +79,14 @@
       <p>¡Haz que cada foto sea inolvidable! Usa nuestro filtro exclusivo de Instagram para capturar momentos mágicos, ¡no olvides etiquetarnos! <strong>@alemantilla1 y @christoferisea</strong></p>
       <a class="boton"  href="https://www.instagram.com/ar/857696999624233/">INSTAGRAM</a>
     </div>
-<!--
-    <div data-aos="fade-up"  class="information-bloque">
-    <img src="./figuras/playlist.png" alt="">
-    <h3>Playlist</h3>
-    <p>La fiesta la haces vos, ayudanos con la música, recomendanos esa canción que no puede faltar</p>
-    <a class="boton" href="https://youtu.be/p1JmzB6E-C8?si=cXBIfuRSI5B5Yq27">PLAYLIST</a>
-  </div>
 
--->
+    <div data-aos="fade-up"  class="information-bloque">
+      <img src="./figuras/love.png" alt="">
+      <h3>PREBODA</h3>
+      <p>¡La felicidad es más grande cuando se comparte! <br> Descubrí nuestras fotos de la pre-boda.</p>
+      <a class="boton" href="https://carolinaplazphotography.pixieset.com/alejandraychristoferpreboda/">VER MÁS</a>
+  
+       </div>
 </div>  
 </main>
 
