--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div data-aos="fade-up"  class="information-bloque">
       <img src="./figuras/love.png" alt="">
       <h3>PREBODA</h3>
-      <p>¡La felicidad es más grande cuando se comparte! <br> Descubrí nuestras fotos de la pre-boda.</p>
+      <p>¡La felicidad es más grande cuando se comparte! <br> Descubrí las fotos de nuestra pre-boda.</p>
       <a class="boton" href="https://carolinaplazphotography.pixieset.com/alejandraychristoferpreboda/">VER MÁS</a>
   
        </div>
