--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
     <p  data-aos="fade-in" >Te esperamos para celebrar nuestra boda</p>
     <img  data-aos="fade-in"  class="fecha" src="./img-editables/fecha.png" alt="">
     <div class="information">
+      <div data-aos="fade-up" class="information-bloque">
+        <img src="./figuras/iglesia.png" alt="">
+        <h3>Ceremonia</h3>
+        <p>02:00 PM - Iglesia <br> Nuestra Señora de Lourdes <br> Miami, Florida. </p>
+        <a class="boton"  href="https://www.google.com.mx/maps/dir//11291+SW+142nd+Ave,+Miami,+FL+33186,+EE.+UU./@25.6624603,-80.4418107,3166m/data=!3m1!1e3!4m8!4m7!1m0!1m5!1m1!1s0x88d9c1bb6d1ded53:0xddea54098a9d73d6!2m2!1d-80.4233782!2d25.6624615?entry=ttu">CÓMO LLEGAR</a>
+      </div>
 
  
       <div data-aos="fade-up" class="information-bloque">
